--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     color: #001233;
     padding: 3px 5px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .cart i {
@@ -81,6 +82,7 @@ body {
     align-items: center;
     gap: 5px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .buttons .bi-plus-lg {
@@ -95,7 +97,76 @@ body {
     font-size: 20px;
 }
 
+/* modal discount offer */
+.modal {
+    width: 600px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #011627;
+    color: whitesmoke;
+    padding: 20px;
+    text-align: center;
+    display: none;
+}
 
+.visible {
+    display: block;
+}
 
+.modal h3, h1 {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    padding-bottom: 10px;
+}
+
+.modal h3 {
+    font-size: 20px;
+}
+
+.modal h1 {
+    font-size: 30px;
+}
+
+.form {
+    margin: 20px 0;
+}
+
+.input {
+    text-align: center;
+    width: 300px;
+    padding: 10px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid whitesmoke;
+    background-color: #011627;
+    color: whitesmoke;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 1.2;
+    font-family: italic;
+}
+
+.input::placeholder {
+    color: whitesmoke;
+
+}
+
+.close-btn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 20px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    transform: scale(1.5);
+    transition: all 1s ease-in-out;
+}
 
 
